[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/HUD/hud_coins.png" type="Texture" id=1]
[ext_resource path="res://Script/HUD.gd" type="Script" id=2]
[ext_resource path="res://Art/Fonts/Kenney Thick.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxCoins" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 156.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )

[node name="CoinIcon" type="TextureRect" parent="VBoxContainer/HBoxCoins"]
modulate = Color( 1, 0.843137, 0, 1 )
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="CoinLabel" type="Label" parent="VBoxContainer/HBoxCoins"]
margin_left = 68.0
margin_right = 156.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_fonts/font = SubResource( 1 )
text = " x 0"
valign = 1

[node name="HBoxClovers" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 156.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 16 )

[node name="Clover2" type="TextureRect" parent="VBoxContainer/HBoxClovers"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
expand = true
stretch_mode = 6

[node name="Clover1" type="TextureRect" parent="VBoxContainer/HBoxClovers"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
expand = true
stretch_mode = 6
